tests/errors/test_06.xpp
// Incompatible type for this assignment

let x: i8 = false;

fn main() void {
	let x: i8 = false;
	let y: bool = 19;

	let mut z: i32 = 19;
	let z_p: i8* = &z;

    let mut p = &z;
    p *= 3;
}
